--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="UTF-8">
-    <title>jigsaw puzzle</title>
+    <title>puzzle</title>
     <style>
       html,
       body {
